# yoloplay

./: .gitignore  Dockerfile  README.md  SVM_PARAMETER_OPTIMIZATION_REPORT.md  Taskfile.yml  clusters.pkl  docker-compose.yml  pyproject.toml  termica.sh  train_autoencoder.py  train_kmeans.py
data/: cameras.yaml
data/rooms/: ingegno.pkl
docs/: IMPLEMENTATION_SUMMARY.md  calibration_guide.md  camera_setup_guide.md  fall_detection_improvement_plan.md  implementation_roadmap.md  training_improvements_plan.md
openspec/: project.md
openspec/changes/archive/2025-11-07-add-k-means-classifier/: proposal.md  tasks.md
openspec/changes/archive/2025-11-07-add-k-means-classifier/specs/k-means-classifier/: spec.md
openspec/changes/archive/2025-11-07-add-one-class-classifier-with-autoencoder/: proposal.md  tasks.md
openspec/changes/archive/2025-11-07-add-one-class-classifier-with-autoencoder/specs/one-class-classifier/: spec.md
openspec/changes/archive/2025-11-07-load-multiple-svm-models/: proposal.md  tasks.md
openspec/changes/archive/2025-11-07-load-multiple-svm-models/specs/svm-anomaly-detection/: spec.md
openspec/specs/k-means-classifier/: spec.md
openspec/specs/one-class-classifier/: spec.md
openspec/specs/svm-anomaly-detection/: spec.md
scripts/: train_autoencoder.py
tests/: test_autoencoder.py  test_kmeans.py
yololab/: main.py
yoloplay/: __init__.py  autoencoder.py  calibration.py  camera_config.py  classification.py  config.py  detectors.py  fall_detector.py  frame_providers.py  main.py  perspective.py  svm.py  utils.py
